# delete-gh-workflows-python

./: .pre-commit-config.yml  CHANGELOG.md  README.md  pyproject.toml
.github/: ci.yml  release.yml
.github/workflows/: ci.yml
src/: main.py
src/delete_gh_workflows/: main.py  workflowManager.py
src/workflow_manager/: main.py
