[tool.poetry]
name = "github-actions-workflow-manager"
version = "0.1.0"
description = "A CLI tool for managing GitHub Actions workflows."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/github-actions-workflow-manager"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
click = "^8.0.1"
fzf = "^0.0.1"  # Add any other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
workflow-manager = "workflow_manager.main:manage_workflow_runs"  # Entry point for the CLI

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
