[tool.poetry]
name = "workflow-manager"
version = "0.1.0"
description = "A CLI tool to manage GitHub Actions workflows and runs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/workflow-manager"
keywords = ["github", "actions", "workflow", "cli", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"
click = "^8.0"

[tool.poetry.scripts]
workflow-manager = "workflow_manager.manage_workflow_runs:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
