[tool.poetry]
name = "delete-gh-workflows"
version = "0.1.0"
description = "A CLI tool to manage GitHub Actions workflows and runs."
authors = ["Sebastian Blum <hello@seblum.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seblum/delete-gh-workflows-python"
keywords = ["github", "actions", "workflow", "cli", "automation"]
packages = [{ include = "src" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"
click = "^8.0"

[tool.poetry.scripts]
delete-gh-workflows = "src.delete_gh_workflows.main:manage_workflow_runs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
